--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
+    "dev": "nodemon ./api/index.js",
+    "start": "node ./api/index.js"
+    },
   "author": "Cristhian Velez",
   "license": "ISC",
   "devDependencies": {
